--- a/_config/config.system.vars.in
+++ b/_config/config.system.vars.in
@@ -65,3 +65,29 @@ GH_RESTAPI_DELETE_REPO_URL        =https://api.github.com/repos/{{OWNER}}/{{REPO
 # to request user repo workflow enable
 GH_RESTAPI_USER_REPO_ENABLE_WORKFLOW_URL  =https://api.github.com/repos/{{OWNER}}/{{REPO}}/actions/workflows/{{WORKFLOW_ID}}/enable
 GH_RESTAPI_USER_REPO_ENABLE_WORKFLOW_FILE =repo-enable-workflow-{{PAGE}}.json
+
+
+GH_BACKUP_CHECKOUTED_REPO_FILE_NAME        =checkouted-repo--[{{OWNER}}][{{REPO}}]--{{DATE_TIME}}
+GH_BACKUP_CHECKOUTED_AUTH_REPO_FILE_NAME   =checkouted-auth-repo--[{{OWNER}}][{{REPO}}]--{{DATE_TIME}}
+
+GH_BACKUP_BARE_REPO_FILE_NAME              =bare-repo--[{{OWNER}}][{{REPO}}]--{{DATE_TIME}}
+GH_BACKUP_BARE_AUTH_REPO_FILE_NAME         =bare-auth-repo--[{{OWNER}}][{{REPO}}]--{{DATE_TIME}}
+
+GH_BACKUP_BARED_CHECKOUT_REPO_FILE_NAME    =bared-checkout-repo--[{{OWNER}}][{{REPO}}]--{{DATE_TIME}}
+GH_BACKUP_BARED_CHECKOUT_AUTH_REPO_FILE_NAME=bared-checkout-auth-repo--[{{OWNER}}][{{REPO}}]--{{DATE_TIME}}
+
+GH_BACKUP_RESTAPI_REPO_INFO_FILE_NAME      =repo-info--[{{OWNER}}][{{REPO}}]--{{DATE_TIME}}
+GH_BACKUP_RESTAPI_REPO_WORKFLOWS_FILE_NAME =repo-workflows--[{{OWNER}}][{{REPO}}]--{{DATE_TIME}}
+GH_BACKUP_RESTAPI_REPO_RELEASES_FILE_NAME  =repo-releases--[{{OWNER}}][{{REPO}}]--{{DATE_TIME}}
+GH_BACKUP_RESTAPI_REPO_STARGAZERS_FILE_NAME=repo-stargazers--[{{OWNER}}][{{REPO}}]--{{DATE_TIME}}
+GH_BACKUP_RESTAPI_REPO_SUBSCRIBERS_FILE_NAME=repo-subscribers--[{{OWNER}}][{{REPO}}]--{{DATE_TIME}}
+GH_BACKUP_RESTAPI_REPO_FORKS_FILE_NAME  =repo-forks--[{{OWNER}}][{{REPO}}]--{{DATE_TIME}}
+
+GH_BACKUP_RESTAPI_USER_REPOS_FILE_NAME     =user-repos--[{{OWNER}}][{{TYPE}}]--{{DATE_TIME}}
+GH_BACKUP_RESTAPI_AUTH_USER_REPOS_FILE_NAME=auth-user-repos--[{{OWNER}}][{{TYPE}}]--{{DATE_TIME}}
+
+GH_BACKUP_RESTAPI_STARRED_REPOS_FILE_NAME  =starred-repos--[{{OWNER}}]--{{DATE_TIME}}
+
+GH_BACKUP_RESTAPI_ORG_REPOS_FILE_NAME      =org-repos--[{{ORG}}][{{TYPE}}]--{{DATE_TIME}}
+
+GH_ENABLE_RESTAPI_REPO_WORKFLOW_FILE_NAME  =repo-enable-workflow--[{{OWNER}}][{{REPO}}][{{WORKFLOW_ID}}]--{{DATE_TIME}}
