--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,7 @@
 [submodule "contools"]
   path = _externals/contools
   url = https://github.com/andry81/contools
+  branch = master
   shallow = true
 
 [submodule "gnuwin32"]
